# dzencode_test

./: Dockerfile  SCRIPTS.md  docker-compose.yml  pyproject.toml
backend/: __init__.py  asgi.py  celery.py  settings.py  urls.py
comments/: consumers.py  models.py  serializers.py  tasks.py  views.py
comments/migrations/: 0001_initial.py  0002_alter_comment_created_at.py  0003_comment_image_comment_text_file_and_more.py
